tests/miniJava/neg/003815_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( public int [] java ( ) { return 0 ; } 0 ) { } else { } } }
